@@ -2,7 +2,7 @@ ets <- function(y, model="ZZZ", damped=NULL,
     alpha=NULL, beta=NULL, gamma=NULL, phi=NULL, additive.only=FALSE, lambda=NULL,
     lower=c(rep(0.0001,3), 0.8), upper=c(rep(0.9999,3),0.98),
     opt.crit=c("lik","amse","mse","sigma","mae"), nmse=3, bounds=c("both","usual","admissible"),
-    ic=c("aic","aicc","bic"),restrict=TRUE, ...)
+    ic=c("aicc","aic","bic"),restrict=TRUE, ...)
 {
   #dataname <- substitute(y)
   opt.crit <- match.arg(opt.crit)
