@@ -7,7 +7,7 @@ ets(y, model="ZZZ", damped=NULL, alpha=NULL, beta=NULL, gamma=NULL,
     phi=NULL, additive.only=FALSE, lambda=NULL, 
     lower=c(rep(0.0001,3), 0.8), upper=c(rep(0.9999,3),0.98), 
     opt.crit=c("lik","amse","mse","sigma","mae"), nmse=3, 
-    bounds=c("both","usual","admissible"), ic=c("aic","aicc","bic"),
+    bounds=c("both","usual","admissible"), ic=c("aicc","aic","bic"),
     restrict=TRUE, ...)
 }
 
